# nested-pandas

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CITATION.cff  CLAUDE.md  LICENSE  README.md  index.json  info.json  pyproject.toml  regressions.json  regressions.xml
.github/ISSUE_TEMPLATE/: 1-bug_report.md
.github/workflows/: asv-main.yml  asv-nightly.yml  asv-pr.yml  build-documentation.yml  pre-commit-ci.yml  publish-benchmarks-pr.yml  publish-to-pypi.yml  smoke-test.yml  testing-and-coverage.yml  testing-pandas-dev.yml  testing-windows.yml
_results/: benchmarks.json
_results/gh-runner/: 00be4642-virtualenv-py3.10-Cython-build-packaging.json  00be4642-virtualenv-py3.11-Cython-build-packaging.json  025ad962-virtualenv-py3.10-Cython-build-packaging.json  025ad962-virtualenv-py3.11-Cython-build-packaging.json  03c3ad4d-virtualenv-py3.11-Cython-build-packaging.json  05cc195f-virtualenv-py3.10-Cython-build-packaging.json  05cc195f-virtualenv-py3.11-Cython-build-packaging.json  070f2898-virtualenv-py3.11-Cython-build-packaging.json  080c3e9c-virtualenv-py3.11-Cython-build-packaging.json  0873b32d-virtualenv-py3.11-Cython-build-packaging.json  094b8732-virtualenv-py3.11-Cython-build-packaging.json  0980e1c2-virtualenv-py3.11-Cython-build-packaging.json  0bb042ae-virtualenv-py3.10-Cython-build-packaging.json  0bb042ae-virtualenv-py3.11-Cython-build-packaging.json  0c404e7a-virtualenv-py3.11-Cython-build-packaging.json  0cfbe5f3-virtualenv-py3.10-Cython-build-packaging.json  0cfbe5f3-virtualenv-py3.11-Cython-build-packaging.json  0d8c2f35-virtualenv-py3.10-Cython-build-packaging.json  0d8c2f35-virtualenv-py3.11-Cython-build-packaging.json  0d944176-virtualenv-py3.11-Cython-build-packaging.json  0dabaff3-virtualenv-py3.11-Cython-build-packaging.json  0dadb25f-virtualenv-py3.10-Cython-build-packaging.json  0dadb25f-virtualenv-py3.11-Cython-build-packaging.json  0e4dc26a-virtualenv-py3.10-Cython-build-packaging.json  0e4dc26a-virtualenv-py3.11-Cython-build-packaging.json  0ed37467-virtualenv-py3.10-Cython-build-packaging.json  0ed37467-virtualenv-py3.11-Cython-build-packaging.json  0fac9351-virtualenv-py3.11-Cython-build-packaging.json  10098509-virtualenv-py3.11-Cython-build-packaging.json  101b95ad-virtualenv-py3.11-Cython-build-packaging.json  1090b6e1-virtualenv-py3.11-Cython-build-packaging.json  109c16c8-virtualenv-py3.10-Cython-build-packaging.json  109c16c8-virtualenv-py3.11-Cython-build-packaging.json  (+353 more)
benchmarks/: asv.conf.json  benchmarks.py
docs/: about.rst  conf.py  gettingstarted.rst  index.rst  notebooks.rst  reference.rst  requirements.txt  tutorials.rst
(+96 files in other folders)
